--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
+    "date-fns": "^2.29.3",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.4.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
@@ -24,6 +28,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.26.0",
     "typescript": "^4.6.4",
+    "typescript-styled-plugin": "^0.18.2",
     "vite": "^3.2.0"
   }
 }
